[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/WaveManager.gd" type="Script" id=1]
[ext_resource path="res://Extra/Fonts/Halo Dek.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 107
outline_size = 8
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 53
outline_size = 6
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="WaveManager" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="WaveUI" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="WaveLabel" type="Label" parent="CanvasLayer/WaveUI"]
margin_right = 1920.0
margin_bottom = 1080.0
size_flags_vertical = 5
custom_fonts/font = SubResource( 1 )
text = "Wave: 1"
align = 1

[node name="TimeLabel" type="Label" parent="CanvasLayer/WaveUI"]
margin_top = 111.0
margin_right = 1920.0
margin_bottom = 166.0
custom_fonts/font = SubResource( 2 )
text = "Time: 00:00"
align = 1
valign = 1
